--- a/index.html.html
+++ b/index.html.html
@@ -45,7 +45,7 @@
   <body>
     <main>
     <header class="header">
-    <img src="Eli.jpg" class="img" alt="">
+    <img src="img/Eli.jpg" class="img" alt="">
     <h1>Elinéia de Santana Soares</h1>
     <p class="header p">Salvador/BA</p>
     <p class="header p">Contato: (71) 982674904 / 991379181</p>
